--- a/MongoDBClient/page2.ui
+++ b/MongoDBClient/page2.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_3">
    <item>
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="imageView">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
        <horstretch>0</horstretch>
@@ -32,7 +32,10 @@
       <enum>QFrame::Box</enum>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>Show Image</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
@@ -57,21 +60,21 @@
        </property>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
-         <widget class="QListView" name="listView"/>
+         <widget class="QListWidget" name="filePaths"/>
         </item>
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
-           <widget class="QPushButton" name="pushButton">
+           <widget class="QPushButton" name="open">
             <property name="text">
-             <string>PushButton</string>
+             <string>Open ...</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="pushButton_2">
+           <widget class="QPushButton" name="upload">
             <property name="text">
-             <string>PushButton</string>
+             <string>Upload</string>
             </property>
            </widget>
           </item>
@@ -95,11 +98,11 @@
         </size>
        </property>
        <property name="title">
-        <string>download</string>
+        <string>Download</string>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
-         <widget class="QLineEdit" name="lineEdit"/>
+         <widget class="QLineEdit" name="downloadUrl"/>
         </item>
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -117,7 +120,7 @@
            </spacer>
           </item>
           <item>
-           <widget class="QPushButton" name="pushButton_3">
+           <widget class="QPushButton" name="download">
             <property name="maximumSize">
              <size>
               <width>120</width>
@@ -125,7 +128,7 @@
              </size>
             </property>
             <property name="text">
-             <string>PushButton</string>
+             <string>Download</string>
             </property>
            </widget>
           </item>
